# fastapi-project

./: README.md  pyproject.toml
fastapi_project/: app.py  database.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: ea70c911f954_create_users_table.py  fffdb68b4279_updated_at_field.py
tests/: conftest.py  test_app.py  test_db.py
